--- a/css/style.css
+++ b/css/style.css
@@ -25,17 +25,30 @@ input {
 }
 
 .btn-success {
-    color: #fff;
-    background-color: #5cb85c;
-    border-color: #4cae4c;
+  color: #fff;
+  background-color: #5cb85c;
+  border-color: #4cae4c;
 }
 
 .btn-delete {
-    color: #fff;
-    background-color: #CF000F;
-    border-color: #CF000F;
+  color: #fff;
+  background-color: #cf000f;
+  border-color: #cf000f;
 }
 
 .quantity {
   margin: 0 5px;
+}
+
+.line1,
+.line3 {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.line2 {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
 }
